macro/src/snapshots/ritter_macro__tests__struct_optional.snap
---
source: macro/src/lib.rs
expression: "rustfmt_code(&expand_grammar(parse_quote!\n{\n    mod grammar\n    {\n        #[derive(ritter::Rule)] #[language] pub struct Language\n        { #[leaf(re(r\"\\d+\"))] v: Option<i32>, t: Option<Number>, }\n        #[derive(ritter::Rule)] pub struct Number\n        { #[leaf(re(r\"\\d+\"))] v: i32 }\n    }\n}).to_token_stream().to_string())"
---
mod grammar {
    impl ::ritter::rule::Language for Language {
        fn produce_grammar() -> String {
            String::new()
        }
        fn language() -> ::ritter::tree_sitter::Language {
            unsafe extern "C" {
                fn tree_sitter_Language() -> ::ritter::tree_sitter::Language;
            }
            unsafe { tree_sitter_Language() }
        }
        #[doc = r" Parse an input string according to the grammar. Returns either any parsing errors that happened, or a"]
        #[doc = "[`Language`]"]
        #[doc = r" instance containing the parsed structured data."]
        fn parse(input: &str) -> ::ritter::ParseResult<Self> {
            ::ritter::__private::parse(input, Self::language)
        }
    }
    impl ::ritter::Extract for Language {
        type Output = Self;
        type LeafFn = ();
        #[allow(non_snake_case)]
        fn extract<'tree>(
            ctx: &mut ::ritter::extract::ExtractContext,
            node: Option<::ritter::tree_sitter::Node<'tree>>,
            source: &[u8],
            _l: Self::LeafFn,
        ) -> Result<Self, ::ritter::extract::ExtractError<'tree>> {
            let node = node.ok_or_else(|| ::ritter::error::ExtractError::missing_node(ctx))?;
            ::ritter::__private::extract_struct_or_variant(
                stringify!(Language),
                node,
                move |state| {
                    Ok(Language {
                        v: ::ritter::__private::extract_field::<Option<i32>, _>(
                            ::ritter::extract::BaseExtractor::default(),
                            (),
                            state,
                            ::ritter::extract::ExtractFieldContext::new(0u32, true, |state| {
                                match state {
                                    0u32 => ::ritter::extract::ExtractFieldState::Complete,
                                    _ => ::ritter::extract::ExtractFieldState::Overflow,
                                }
                            }),
                            source,
                            "v",
                        )?,
                        t: ::ritter::__private::extract_field::<Option<Number>, _>(
                            ::ritter::extract::BaseExtractor::default(),
                            (),
                            state,
                            ::ritter::extract::ExtractFieldContext::new(1u32, true, |state| {
                                match state {
                                    0u32 => ::ritter::extract::ExtractFieldState::Str(
                                        "Number", true, false,
                                    ),
                                    1u32 => ::ritter::extract::ExtractFieldState::Complete,
                                    _ => ::ritter::extract::ExtractFieldState::Overflow,
                                }
                            }),
                            source,
                            "t",
                        )?,
                    })
                },
            )
        }
    }
    impl ::ritter::rule::Rule for Language {
        const RULE_NAME: &'static str = "Language";
        fn produce_ast() -> String {
            String::new()
        }
    }
    impl ::ritter::Extract for Number {
        type Output = Self;
        type LeafFn = ();
        #[allow(non_snake_case)]
        fn extract<'tree>(
            ctx: &mut ::ritter::extract::ExtractContext,
            node: Option<::ritter::tree_sitter::Node<'tree>>,
            source: &[u8],
            _l: Self::LeafFn,
        ) -> Result<Self, ::ritter::extract::ExtractError<'tree>> {
            let node = node.ok_or_else(|| ::ritter::error::ExtractError::missing_node(ctx))?;
            ::ritter::__private::extract_struct_or_variant(stringify!(Number), node, move |state| {
                Ok(Number {
                    v: ::ritter::__private::extract_field::<i32, _>(
                        ::ritter::extract::BaseExtractor::default(),
                        (),
                        state,
                        ::ritter::extract::ExtractFieldContext::new(
                            0u32,
                            false,
                            |state| match state {
                                0u32 => ::ritter::extract::ExtractFieldState::Complete,
                                _ => ::ritter::extract::ExtractFieldState::Overflow,
                            },
                        ),
                        source,
                        "v",
                    )?,
                })
            })
        }
    }
    impl ::ritter::rule::Rule for Number {
        const RULE_NAME: &'static str = "Number";
        fn produce_ast() -> String {
            String::new()
        }
    }
}
